import("//gn/toolchain/rtems/rtems.gni")

if (rtems_bsp == "stm32f4") {
  source_set("stm32f4") {
    sources = [
      "stm32f4xx/drivers/src/stm32f4xx_hal_dcmi_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_tim_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_flash_ramfunc.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_pccard.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_nand.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_nor.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_sram.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_utils.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_gpio.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_exti.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_cec.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_adc.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_hcd.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_can.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_adc.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_pwr.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_cortex.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_iwdg.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_rcc_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_gpio.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_dma2d.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_spi.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_tim.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_sdram.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_rng.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_i2s_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_i2c_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_dsi.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_pwr.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_dma2d.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_rcc.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_rtc.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_pwr_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_adc_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_crc.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_i2c.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_wwdg.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_dcmi.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_usb.c",
 #     "stm32f4xx/drivers/src/stm32f4xx_hal_timebase_rtc_alarm_template.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_hash_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_fmpi2c.c",
#      "stm32f4xx/drivers/src/stm32f4xx_hal_timebase_tim_template.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_smartcard.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_spi.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_i2c.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_dma.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_usart.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_sd.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_fmc.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_rtc_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_fmpi2c_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_spdifrx.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_exti.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_ltdc_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_sai_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_fmpi2c.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_dac_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_crc.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_lptim.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_uart.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_i2s.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_cryp_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_dac.c",
#      "stm32f4xx/drivers/src/stm32f4xx_hal_timebase_rtc_wakeup_template.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_rcc.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_sai.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_tim.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_rtc.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_fmpsmbus.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_smbus.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_dma.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_usart.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_mmc.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_flash_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_ltdc.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_cryp.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_fsmc.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_pcd_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_qspi.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_dfsdm.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_dac.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_lptim.c",
#      "stm32f4xx/drivers/src/stm32f4xx_hal_msp_template.c",
      "stm32f4xx/drivers/src/stm32f4xx_ll_sdmmc.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_eth.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_dma_ex.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_rng.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_hash.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_flash.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_irda.c",
      "stm32f4xx/drivers/src/stm32f4xx_hal_pcd.c",
    #    "stm32f4xx/drivers/src/Legacy/stm32f4xx_hal_can.c",
      "stm32f4xx/soc/system_stm32f4xx.c",
    ]

    public_configs = [":stm32cube_config"]
    defines = ["CORE_CM4"]
  }
  
} else if (rtems_bsp == "stm32f7") {
  source_set("stm32f7") {
    sources = [
      "stm32f7xx/system_stm32f7xx.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_rcc_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_rng.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_dma_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_cec.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_pcd_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_cortex.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_cryp_ex.c",
#      "stm32f7xx/drivers/src/stm32f7xx_hal_timebase_rtc_wakeup_template.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_flash.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_adc_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_mmc.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_tim.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_uart.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_tim_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_pcd.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_iwdg.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_i2c.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_usb.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_usart.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_spi_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_crc.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_lptim.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_dac_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_tim.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_hash_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_rtc.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_rtc.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_rng.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_jpeg.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_i2s.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_spi.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_rtc_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_pwr_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_exti.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_dma.c",
#      "stm32f7xx/drivers/src/stm32f7xx_hal_msp_template.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_gpio.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_sd.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_exti.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_mdios.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_dac.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_dma.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_sdram.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_crc_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_eth.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_dma2d.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_sram.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_nor.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_smartcard.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_hash.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_qspi.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_spdifrx.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_dma2d.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_smbus.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_lptim.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_sdmmc.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_adc.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_crc.c",
#      "stm32f7xx/drivers/src/stm32f7xx_hal_timebase_rtc_alarm_template.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_wwdg.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_sai.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_dcmi_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_uart_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_dfsdm.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_ltdc.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_flash_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_i2c.c",
#      "stm32f7xx/drivers/src/stm32f7xx_hal_timebase_tim_template.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_nand.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_dsi.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_cryp.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_can.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_smartcard_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_utils.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_adc.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_ltdc_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_i2c_ex.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_rcc.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_dac.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_usart.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_spi.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_irda.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_pwr.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_dcmi.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_rcc.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_gpio.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_pwr.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_hcd.c",
      "stm32f7xx/drivers/src/stm32f7xx_ll_fmc.c",
      "stm32f7xx/drivers/src/stm32f7xx_hal_sai_ex.c",
  #    "stm32f7xx/drivers/src/Legacy/stm32f7xx_hal_can.c",
    ]
    
    defines = [
      "CORE_CM7",
      "STM32F746xx"
    ]
    public_configs = [":stm32cube_config"]
  }
}

source_set("stm32cube") {
  sources = ["stm32cube_hal.c"]
}

config("stm32cube_config") {
  defines = [
    "USE_HAL_DRIVER",
    "USE_FULL_LL_DRIVER"
  ]
  
  
  include_dirs = [
    "${rtems_bsp}xx/soc",
    "${rtems_bsp}xx/drivers/include",
    "${rtems_bsp}xx/drivers/include/Legacy",
    "common_ll/include"
  ] 
}

config("stm32f7_configs") {
  defines = [
    "CONFIG_SOC_SERIES_STM32F7X",
    "STM32F746xx"
  ]
}

config("stm32f4_configs") {
  defines = [
    "CONFIG_SOC_SERIES_STM32F4X"
  ]
}

